--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script>
       var coverSupport = 'CSS' in window && typeof CSS.supports === 'function' && (CSS.supports('top: env(a)') ||
         CSS.supports('top: constant(a)'))
@@ -17,4 +18,12 @@
     <div id="app"><!--app-html--></div>
     <script type="module" src="/main.js"></script>
   </body>
+  <script>
+	  onMounted(() => {
+	      const meta = document.createElement('meta');
+	      meta.name = "viewport";
+	      meta.content = "width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no";
+	      document.getElementsByTagName('head')[0].appendChild(meta);
+	  });
+  </script>
 </html>
